syntax = "proto3";

package cart;

option go_package = "./cartpb";

service CartService {
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc UpdateItemQuantity(UpdateItemQuantityRequest) returns (UpdateItemQuantityResponse);
  rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse);
  rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);
}

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message AddItemRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message AddItemResponse {
  string message = 1;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message UpdateItemQuantityRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message UpdateItemQuantityResponse {
  string message = 1;
}

message RemoveItemRequest {
  string user_id = 1;
  string product_id = 2;
}

message RemoveItemResponse {
  string message = 1;
}

message ClearCartRequest {
  string user_id = 1;
}

message ClearCartResponse {
  string message = 1;
}
